--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "inert": "^3.0.1",
     "joi": "^6.7.1",
     "lodash": "^3.10.1",
+    "soundbank-pitch-shift": "^1.0.3",
     "three-orbit-controls": "^72.0.0",
     "tracking": "^1.1.1",
     "tween.js": "^16.3.1",
